--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     width: 100%;
     cursor: pointer;
+    z-index: 1;
     will-change: background-color, width;
     
     animation: SideBarIsClose 0.2s ease-out;
