--- a/src/components/PanelActivity/index.scss
+++ b/src/components/PanelActivity/index.scss
@@ -1,5 +1,27 @@
 @import "../../styles/_yoti-variables";
 
 .PanelActivity {
-    
+    display: grid;
+    grid-template-columns: min-content min-content auto 1fr auto; 
+    grid-template-areas: "status user-picture type space date";
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.PanelActivity_user-picture {
+    margin: 0 40px 0 10px;
+    grid-area: user-picture;
+}
+
+.PanelActivity_user-picture-image {
+    width: 50px;
+}
+
+.PanelActivity_dates {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    grid-area: date;
+    font-size: 14px;
+    color: $color-primary-3;
 }
