--- a/src/components/PanelActivity/index.scss
+++ b/src/components/PanelActivity/index.scss
@@ -6,6 +6,7 @@
     grid-template-areas: "status user-picture type space date";
     justify-content: flex-start;
     align-items: center;
+    cursor: pointer;
 }
 
 .PanelActivity_user-picture {
@@ -14,7 +15,7 @@
 }
 
 .PanelActivity_user-picture-image {
-    width: 50px;
+    width: 40px;
 }
 
 .PanelActivity_dates {
