--- a/src/containers/Activity/index.scss
+++ b/src/containers/Activity/index.scss
@@ -1,3 +1,5 @@
+@import "../../styles/_yoti-variables";
+
 .Activity {
     
 }
@@ -12,4 +14,47 @@
     font-size: 18px;
     line-height: 28px;
     margin: 18px 0;
+}
+
+.Activity_modal {
+    width: 55vh;
+    height: 85vh;
+    max-height: 600px;
+    max-width: 650px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    outline: none;
+    border-radius: 4px;
+    background-color: $color-primary-4;
+    box-shadow: 0px 3px 10px 2px $color-primary-2;
+
+    cursor: auto;
+    //overflow: auto;
+    z-index: 11;
+}
+
+.Activity_modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 1031; // I had to use this z-index because .navbar-fixed-top has a very high z-index
+    cursor: pointer;
+}
+
+.Activity_modal-close {
+    position: absolute;
+    display: inline-block;
+    right: 0;
+    font-weight: 500;
+    font-size: 18px;
+    color: white;
+    transform: translateX(200%);
+    cursor: pointer;
 }
