--- a/src/containers/Activity/index.scss
+++ b/src/containers/Activity/index.scss
@@ -44,7 +44,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
-    z-index: 1031; // I had to use this z-index because .navbar-fixed-top has a very high z-index
+    z-index: 2; 
     cursor: pointer;
 }
 
